Para fixar - Flex wrap.

--- a/fundamentos/secao_05_html_e_css_forms_flexbox_e_responsivo/dia_03_css_flexbox_parte_01/exercicio_01/style/style.css
+++ b/fundamentos/secao_05_html_e_css_forms_flexbox_e_responsivo/dia_03_css_flexbox_parte_01/exercicio_01/style/style.css
@@ -9,10 +9,14 @@
     width: 30%;
   }
 
-  .box-container {
+  /* .box-container {
     background-color: #0fa36b;
     display: flex;
     flex-direction: row; 
-  }
+  } */
 
-  
+.box-container {
+    background-color: #0fa36b;
+    display: flex;
+    flex-wrap: wrap-reverse; 
+  }  
